--- a/index.html
+++ b/index.html
@@ -471,7 +471,11 @@ margin: 0rem !important;
                       <div id="w-node-_67d1a327-62ac-5e56-c425-a2489fefc79c-36ae970b" class="mainfeatures_content-wrapper">
                         <div class="mainfeatures_content">
                           <h3 class="heading-style-h3">Ingest and analyze diverse project data automatically.</h3>
-                          <p class="text-size-regular paragraph-4"><br>The project team interacts with lognos by simple messages and providing risk registers, meeting minutes, schedules, cost reports, and any relevant communication.<br><br>  <span class="text-span-2">lognos Agent</span> processes the information, feeds the risks models, and provides results.</p>
+                          <p class="text-size-regular paragraph-4"><br>
+                            The project team interacts with lognos by simple messages and providing risk registers, meeting minutes, schedules, cost reports, and any relevant communication.<br><br>
+                              <span class="text-span-2">Lognos Agent</span> processes the information, feeds the risks models, and provides results.<br><br>
+                              <a href="https://southen.co" target="_blank" class="text-span-2" style="font-weight:bold;">Southen LLC</a> SMEs provide any required support to streamline the process, if needed.
+                          </p>
                         </div>
                       </div>
                     </div>
